# grapheditor

./: .gitignore  .readthedocs.yml  AUTHORS.txt  README.md  pyproject.toml  setup.cfg  setup.py
conda/: environment.yml  meta.yaml
doc/: conf.py  environment.yml  index.rst
doc/user/: autosum.rst  index.rst  netx.rst
examples/networkx/: __init__.py  conf.py  nx_app.py
src/OpenAlea.GraphEditor.egg-info/: PKG-INFO  SOURCES.txt
src/openalea/grapheditor/: base.py  baselisteners.py  edgefactory.py  interfaces.py  observer.py  qtgraphview.py  qtutils.py  version.py
src/openalea/grapheditor/SimpleGraph/: custom_graph_model.py  custom_graph_view.py  main.py
test/: test_grapheditor.py
