[build-system]
requires = [
  "setuptools",
  "setuptools_scm",
]
build-backend = "setuptools.build_meta"

# enable dynamic versioning based on git tags
[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools-scm

[project]
name = "openalea.grapheditor"
authors = [
  { name = "Daniel Barbeau"},
  { name = "Christophe Pradal"},
]
description = "An generic GUI API for viewing and interacting with various sorts of graphs"
license = "CECILL-C"
license-files = ["LICEN[CS]E*"]
keywords = ["openalea", "graph", "qt"]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Framework :: OpenAlea",
]
dynamic = ["version", "readme"]
dependencies = [
  "qtpy",
]

[project.optional-dependencies]
test = ["pytest"]
doc = [
  "pydata-sphinx-theme",
  "myst-parser",
  "sphinx-favicon",
  "ipykernel",
  "ipython_genutils",
  "nbsphinx",
]

[project.urls]
Homepage = "https://openalea.readthedocs.io/"
"Bug Tracker" = "https://github.com/openalea/grapheditor/issues"
Discussions = "https://github.com/openalea/grapheditor/discussions"
Changelog = "https://github.com/openalea/grapheditor/releases"

[tool.setuptools.dynamic]
version = {attr = "openalea.grapheditor.version.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*"]
